k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-decrypte
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-decrypte
  template:
    metadata:
      labels:
        app: web-decrypte
    spec:
      containers:
        - name: web-decrypte
          image: tonuser/web-decrypte:latest
          ports:
            - containerPort: 80
