k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-decrypte-service
spec:
  selector:
    app: web-decrypte
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
