k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-decrypte-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: web.noryx.fr
spec:
  rules:
    - host: web.noryx.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-decrypte-service
                port:
                  number: 80
